--- a/HlsWinForm/HlsVideo.razor
+++ b/HlsWinForm/HlsVideo.razor
@@ -2,7 +2,7 @@
 
 
 <div class="container" style="alignment: center">
-    <h1>Hls.js demo - basic usage @source</h1>
+    <h1>Hls.js demo - Blazor wrapped: @source</h1>
     <video height="600" id="video" controls></video>
     <button id="play" @onclick="PlayVideo">Play</button>
 </div>
@@ -12,7 +12,7 @@
     
     protected override void OnInitialized()
     {
-        source = "http://127.0.0.1:8080/video/out.m3u8";
+        source = "http://192.168.0.54:8080/video/out.m3u8";
     }
     private  void PlayVideo(object? state)
     {
