--- a/HlsWinForm/HlsVideo.razor
+++ b/HlsWinForm/HlsVideo.razor
@@ -12,8 +12,8 @@
     
     protected override void OnInitialized()
     {
-        //source = "http://192.168.0.54:8080/video/out.m3u8";
-        source = "http://localhost:8080/video/out.m3u8";
+        source = "http://192.168.0.54:8080/video/out.m3u8";
+
     }
     private  void PlayVideo(object? state)
     {
