--- a/HlsWinForm/HlsVideo.razor
+++ b/HlsWinForm/HlsVideo.razor
@@ -12,7 +12,7 @@
     
     protected override void OnInitialized()
     {
-        source = "http://192.168.0.54:8080/video/out.m3u8";
+        source = "https://localhost:8443/hls/test/out.m3u8";
 
     }
     private  void PlayVideo(object? state)
